@@ -199,37 +199,10 @@ default:
   <<: *cache_bundler
   <<: *setup_bundler_env
   variables:
-    PUPPET_VERSION: '~> 4.10.0'
+    PUPPET_VERSION: '~> 4.10.10'
   script:
     - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default]
-
-default-fips:
-  stage: acceptance
-  tags:
-    - beaker
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  <<: *only_with_SIMP_FULL_MATRIX
-  variables:
-    PUPPET_VERSION: '~> 4.10.0'
-    BEAKER_fips: 'yes'
-  script:
-    - bundle exec rake spec_clean
-    - bundle exec rake beaker:suites[default]
-
-default-oel:
-  stage: acceptance
-  tags:
-    - beaker
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  <<: *only_with_SIMP_FULL_MATRIX
-  variables:
-    PUPPET_VERSION: '~> 4.10.0'
-  script:
-    - bundle exec rake spec_clean
-    - bundle exec rake beaker:suites[default,oel]
 
 default-puppet5:
   stage: acceptance
@@ -244,20 +217,30 @@ default-puppet5:
     - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default]
 
-default-fips-puppet5:
+default-fips:
   stage: acceptance
   tags:
     - beaker
   <<: *cache_bundler
   <<: *setup_bundler_env
-  <<: *only_with_SIMP_FULL_MATRIX
   variables:
+    PUPPET_VERSION: '~> 4.10.10'
     BEAKER_fips: 'yes'
-    PUPPET_VERSION: '~> 5.3'
-    BEAKER_PUPPET_COLLECTION: 'puppet5'
   script:
     - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default]
+
+default-oel:
+  stage: acceptance
+  tags:
+    - beaker
+  <<: *cache_bundler
+  <<: *setup_bundler_env
+  variables:
+    PUPPET_VERSION: '~> 4.10.10'
+  script:
+    - bundle exec rake spec_clean
+    - bundle exec rake beaker:suites[default,oel]
 
 default-oel-puppet5:
   stage: acceptance
@@ -273,6 +256,20 @@ default-oel-puppet5:
     - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default,oel]
 
+default-oel-fips:
+  stage: acceptance
+  tags:
+    - beaker
+  <<: *cache_bundler
+  <<: *setup_bundler_env
+  <<: *only_with_SIMP_FULL_MATRIX
+  variables:
+    PUPPET_VERSION: '~> 4.10.10'
+    BEAKER_fips: 'yes'
+  script:
+    - bundle exec rake spec_clean
+    - bundle exec rake beaker:suites[default,oel]
+
 stunnel:
   stage: acceptance
   tags:
@@ -280,7 +277,20 @@ stunnel:
   <<: *cache_bundler
   <<: *setup_bundler_env
   variables:
-    PUPPET_VERSION: '4.10'
+    PUPPET_VERSION: '~> 4.10.10'
+  script:
+    - bundle exec rake spec_clean
+    - bundle exec rake beaker:suites[stunnel]
+
+stunnel-fips:
+  stage: acceptance
+  tags:
+    - beaker
+  <<: *cache_bundler
+  <<: *setup_bundler_env
+  variables:
+    PUPPET_VERSION: '~> 4.10.10'
+    BEAKER_fips: 'yes'
   script:
     - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[stunnel]
@@ -292,7 +302,7 @@ stunnel-puppet5:
   <<: *cache_bundler
   <<: *setup_bundler_env
   variables:
-    PUPPET_VERSION: '~> 5.0'
+    PUPPET_VERSION: '~> 5.3'
   script:
     - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[stunnel]
@@ -303,37 +313,9 @@ stunnel-oel:
     - beaker
   <<: *cache_bundler
   <<: *setup_bundler_env
-  variables:
-    PUPPET_VERSION: '4.10'
   <<: *only_with_SIMP_FULL_MATRIX
+  variables:
+    PUPPET_VERSION: '~> 4.10.10'
   script:
     - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[stunnel,oel]
-
-stunnel-oel-puppet5:
-  stage: acceptance
-  tags:
-    - beaker
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  <<: *only_with_SIMP_FULL_MATRIX
-  variables:
-    PUPPET_VERSION: '~> 5.3'
-    BEAKER_PUPPET_COLLECTION: 'puppet5'
-  script:
-    - bundle exec rake spec_clean
-    - bundle exec rake beaker:suites[stunnel,oel]
-
-stunnel-fips:
-  stage: acceptance
-  tags:
-    - beaker
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  <<: *only_with_SIMP_FULL_MATRIX
-  variables:
-    PUPPET_VERSION: '4.10'
-    BEAKER_fips: 'yes'
-  script:
-    - bundle exec rake spec_clean
-    - bundle exec rake beaker:suites[stunnel]
